# SerikBLDDesktop

./: CMakeLists.txt  README.md  globalconstvar.cpp  globalconstvar.h  main.cpp  main.qml  qmlComponents.qrc  serikbldbackend.cpp  serikbldbackend.h
PersonelManager/: PersonelManager.qml  personelmodel.cpp  personelmodel.h
QML/: AnaMenu.qml  PersonelManager.qml  qmldir
core/: item.cpp  item.h  mongodb.cpp  mongodb.h
